apps/aredn-meshmap/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-meshmap
  namespace: aredn-meshmap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-meshmap
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toEntities:
      - world
  ingress:
    - fromEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: aredn
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
